--- a/iscrizioni/prima prova.html
+++ b/iscrizioni/prima prova.html
@@ -3,14 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>iscrizione</title>
+    <script src="validatore.js"></script>
+    <style type="text/css">
+      #JS
+      {
+	  display: none;
+      }
+    </style>
+    <script>
+        function checkJS()
+      {
+          document.getElementById('js').style.display="inline";
+      }
+    </script>
 </head>
-<body>
-      <form method="post" action="lab.php">
-      <h2>iscrizione per donazione di organi</h2>
+<body onload="checkJS()">
+      <div id="js">
+          <form method="post" action="lab.php" onSubmit="return validate_input(this)">
+            <h2>iscrizione</h2>
+            inserisci email
+            <input type="text" pattern="[a-z0-9A-Z]*@[a-zA-Z]*[.][a-zA-Z]*" id="e-mail" /><br>
+            inserisci codice fiscale
+            <input type="text" pattern="^[A-Z]{6}[0-9]{2}[A-Z][0-9]{2}[A-Z][0-9]{3}[A-Z]$" maxlength="26" id="codice" /><br>
+            inserisci partita iva
+            <input type="text" pattern="[0-9]*" maxlength="11" id="partitaIva" /><br>
+            seleziona personaggio preferito
+                <select><option value="pippo">pippo</option>
+                        <option value="pluto">pluto</option>
+                        <option value="topolino">topolino</option></select><br>
+            <input type="radio" name="sesso" value="donna"/> donna<br>
+            <input type="radio" name="sesso" value="uomo"/> uomo<br>
+            seleziona due hobby<br>
+            <input type="checkbox" name="pesca" value="pesca"/> pesca<br>
+            <input type="checkbox" name="canto" value="canto"/> canto<br>
+            <input type="checkbox" name="scacchi" value="scacchi"/> scacchi<br>
+            <input type="submit" value="invia" />
+          </form>
+      </div>
+<form method="post" action="lab.php">
+      <h2>iscrizione</h2>
 	  inserisci email
       <input type="text" pattern="[a-z0-9A-Z]*@[a-zA-Z]*[.][a-zA-Z]*" id="e-mail" /><br>
       inserisci codice fiscale
-      <input type="text" pattern="[a-z0-9A-Z]*" maxlength="26" id="codice" /><br>
+      <input type="text" pattern="^[A-Z]{6}[0-9]{2}[A-Z][0-9]{2}[A-Z][0-9]{3}[A-Z]$" maxlength="26" id="codice" /><br>
       inserisci partita iva
       <input type="text" pattern="[0-9]*" maxlength="11" id="partitaIva" /><br>
       seleziona personaggio preferito
