--- a/iscrizioni/prima prova.html
+++ b/iscrizioni/prima prova.html
@@ -44,11 +44,11 @@
           <form method="post" action="lab.php" onSubmit="return validate_input(this)">
             <h2>iscrizione con JavaScript</h2>
             inserisci email
-            <input type="text" pattern="[a-z0-9A-Z]*@[a-zA-Z]*[.][a-zA-Z]*" id="e-mail" /><br>
+            <input type="text" name="mail" id="e-mail" /><br>
             inserisci codice fiscale
-            <input type="text" pattern="^[A-Z]{6}[0-9]{2}[A-Z][0-9]{2}[A-Z][0-9]{3}[A-Z]$" maxlength="26" id="codice" /><br>
+            <input type="text" name="codiceF" id="codice" /><br>
             inserisci partita iva
-            <input type="text" pattern="[0-9]*" maxlength="11" id="partitaIva" /><br>
+            <input type="text" name="partitaIva" id="partitaIva" /><br>
             seleziona personaggio preferito
                 <select><option value="pippo">pippo</option>
                         <option value="pluto">pluto</option>
