aggiunta del file per il lavoro di gruppo, modifica del file "prima prova" per la validazione della checkbox

--- a/iscrizioni/prima prova.html
+++ b/iscrizioni/prima prova.html
@@ -56,9 +56,9 @@
             <input type="radio" name="sesso" value="donna"/> donna<br>
             <input type="radio" name="sesso" value="uomo"/> uomo<br>
             seleziona due hobby<br>
-            <input type="checkbox" name="pesca" value="pesca"/> pesca<br>
-            <input type="checkbox" name="canto" value="canto"/> canto<br>
-            <input type="checkbox" name="scacchi" value="scacchi"/> scacchi<br>
+            <input type="checkbox" name="check" id = "1" value="pesca"/> pesca<br>
+            <input type="checkbox" name="check" id = "2" value="canto"/> canto<br>
+            <input type="checkbox" name="check" id = "3" value="scacchi"/> scacchi<br>
             <input type="submit" value="invia" />
           </form>
       </div>
