--- a/iscrizioni/prima prova.html
+++ b/iscrizioni/prima prova.html
@@ -31,8 +31,10 @@
           <select><option value="pippo">pippo</option>
                   <option value="pluto">pluto</option>
                   <option value="topolino">topolino</option></select><br>
+      seleziona sesso<br>
       <input type="radio" name="sesso" value="donna"/> donna<br>
       <input type="radio" name="sesso" value="uomo"/> uomo<br>
+      <input type="radio" name="sesso" value="nd"/> non voglio specificarlo<br>
       seleziona due hobby<br>
       <input type="checkbox" name="pesca" value="pesca"/> pesca<br>
       <input type="checkbox" name="canto" value="canto"/> canto<br>
@@ -53,9 +55,11 @@
                 <select><option value="pippo">pippo</option>
                         <option value="pluto">pluto</option>
                         <option value="topolino">topolino</option></select><br>
+            seleziona sesso:<br>
             <input type="radio" name="sesso" value="donna"/> donna<br>
             <input type="radio" name="sesso" value="uomo"/> uomo<br>
-            seleziona due hobby<br>
+            <input type="radio" name="sesso" value="nd"/> non voglio specificare<br>
+            seleziona due hobby:<br>
             <input type="checkbox" name="check" id = "1" value="pesca"/> pesca<br>
             <input type="checkbox" name="check" id = "2" value="canto"/> canto<br>
             <input type="checkbox" name="check" id = "3" value="scacchi"/> scacchi<br>
